--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
@@ -11,4 +11,5 @@
     "mongoose": "^8.16.5"
   }
 }
+
 
